updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an IT Professional of over 13 years working in Healthcare as a Sys Admin in the IT Service Management Office</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am originally from New Mexico but currently reside in Tennessee.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My hobbies include gaming both on console and PC and I enjoy fishing.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would be to develop video games.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Mount Juliet, Tennessee</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To expand my skillset and learn something new to broaden my knowledge.</p>
     </section>
 
     <footer id="footer">
